# r7pyinit

./: README.md  pyproject.toml
r7pyinit/: __main__.py  create_project.py
