[tool.poetry]
name = "r7pyinit"
version = "0.1.0"
description = ""
authors = ["Arseniy Kononov <kononovarseniy@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"
mypy = "^0.910"
rope = "^0.21.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.autopep8]
max_line_length = 120
